--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -10,8 +10,9 @@
         <div class="col-md-8 mt-3 offset-md-2">
             <h3>{% trans "Log In" %}</h3>
 
-            <p>{% blocktrans %}Hello again, good to see you! To add a system to the site or leave a bit of a review for 
-                someone elses, get yourself logged in. If you've not got an account, <a class="link" href="{{ signup_url }}">sign up</a>
+            <p>{% blocktrans %}Hello again, good to see you! To add a system to the site or leave a bit of a review for
+                someone elses, get yourself logged in. If you've not got an account, <a class="link"
+                    href="{{ signup_url }}">sign up</a>
                 first.{% endblocktrans %}</p>
         </div>
     </div>
