clean up css no longer needed classes

--- a/spec_a_console/templates/spec_a_console/edit_system.html
+++ b/spec_a_console/templates/spec_a_console/edit_system.html
@@ -13,7 +13,8 @@
 </form>
 
 <div class="d-flex justify-content-center">
-    <a href="{% url 'index' %}" class="btn btn-primary" aria-label="Back to home page">&lt;&lt; Leave without saving</a>
+    <a href="{% url 'index' %}" class="btn btn-primary" aria-label="Back to home page">
+        &lt;&lt; Leave without saving</a>
 </div>
 
 {% else %}
