--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,7 +44,7 @@ p {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: rgba(0, 0, 0, 0.5); /*Black overlay, 50% opacity
+    background-color: rgba(0, 0, 0, 0.5); /*Black overlay, 50% opacity */
     min-height: 300px; /* Adjust as needed */
     width: 100%;
     color: white; /* Optional: for text contrast */
