--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -39,23 +39,12 @@ p {
     font-family: var(--secondary-font);
 }
 
-.section {
-    padding: 1rem 40px 40px 40px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 20px;
-    margin-bottom: 30px;
-
-    scroll-margin-top: 3rem;
-}
-
-
 .bg-main-image {
     background-image: url('/static/images/bg-image.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: rgba(0, 0, 0, 0.5); /*Black overlay, 50% opacity
+    background-color: rgba(0, 0, 0, 0.5); /*Black overlay, 50% opacity */
     min-height: 300px; /* Adjust as needed */
     width: 100%;
     color: white; /* Optional: for text contrast */
