--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
-<body id="top">
+<body id="top" class="min-vh-100">
     <!-- Header and Navbar -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark my-bg-primary" aria-label="Main navigation">
