add bg-image preload to base.html head to improve performance

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,8 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="preload" as="image" href="{% static 'images/bg-image.webp' %}">
+
 </head>
 
 <body id="top" class="min-vh-100">
