add meta description tag to base.html header

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Spec A Console is a fun site for people to describe their &quot;what if&quot; 
+        games consoles from an alternate history">
     <title>{% block title %}Spec A System{% endblock %}</title>
 
     <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
