put detailed_description inside <p> tags in system_detailed.html. Update erd diagram for readme, add new colour folder and colours file to readme-assets

--- a/spec_a_console/templates/spec_a_console/system_detail.html
+++ b/spec_a_console/templates/spec_a_console/system_detail.html
@@ -31,7 +31,7 @@
                     <p><strong>Brief Description:</strong> {{ system.brief_description }}</p>
                     <hr>
                     <h3 class="h6">Detailed Description</h3>
-                    {{ system.detailed_description }}
+                    <p>{{ system.detailed_description }}</p>
                     <hr>
                     <p class="text-muted small">Created by: {{ system.created_by.username }} on 
                         {{system.created_on|date:"F j, Y" }}</p>
