Change social media link addresses in footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -117,14 +117,14 @@
                 <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
                     <h5 class="text-uppercase">Contact Us</h5>
                     <p id="contact">
-                        Email: <a href="mailto:info@example.com">info@example.com</a><br>
+                        Email: <a href="mailto:info@example.com">placeholder@example.com</a><br>
                         Phone: <a href="tel:+1234567890">+1 234 567 890</a>
                     </p>
                 </div>
                 <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
                     <h5 class="text-uppercase">Follow Us</h5>
-                    <a href="#" class="me-2" aria-label="Twitter"><i class="bi bi-twitter"></i>Twitter</a>
-                    <a href="#" class="me-2" aria-label="Facebook"><i class="bi bi-facebook"></i>Facebook</a>
+                    <a href="https://www.twitter.com/" class="me-2" aria-label="Twitter"><i class="bi bi-twitter"></i>Twitter</a>
+                    <a href="https://www.facebook.com/" class="me-2" aria-label="Facebook"><i class="bi bi-facebook"></i>Facebook</a>
                 </div>
             </div>
         </div>
