fix stray </h5> closing tag in base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -79,7 +79,7 @@
         <div class="my-0">
             <div class="col-12">
                 <div class="my-bg-secondary border-bottom border-primary py-2 px-3">
-                    <h5 class="mb-0 text-start"></h5>
+                    <h5 class="mb-0 text-start">
                     {% if user.is_authenticated %}
                     You are currently logged in as <strong>{{ user.username }}</strong>
                     {% else %}
