--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -22,7 +22,7 @@
                 {% csrf_token %}
                 {{ form.as_p }}
                 {% if redirect_field_value %}
-                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
                 {% endif %}
                 <button class="btn btn-login" type="submit">{% trans 'log In' %}</button>
             </form>
