--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -19,7 +19,7 @@
             <form method="post" action="{% url 'account_logout' %}">
                 {% csrf_token %}
                 {% if redirect_field_value %}
-                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
                 {% endif %}
                 <button class="btn btn-login" type="submit">{% trans 'Log Out' %}</button>
             </form>
