minor changes to tidy and remove un-necessary whitespace from models.py. Add preload placeholder-image to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="preload" as="image" href="{% static 'images/bg-image.webp' %}">
+    <link rel="preload" as="image" href="{% static 'images/placeholder-image.webp' %}">
 
 </head>
 
