change 'Create your System' text at top of create_system.html from <p> to <h2> for consistency with edit system page

--- a/spec_a_console/templates/spec_a_console/create_system.html
+++ b/spec_a_console/templates/spec_a_console/create_system.html
@@ -6,11 +6,11 @@
 
 {% if user.is_authenticated %}
 
-<p>Create your system!</p>
+<h2>Create your system!</h2>
 
 <form id="createForm" method="post" enctype="multipart/form-data" novalidate>
     {% csrf_token %}
-    
+
     {% if create_form.errors %}
     <div class="alert alert-danger">
         <ul>
