add role='dialog' to Delete Confirmation Modal outer div in system_detailed.html

--- a/spec_a_console/templates/spec_a_console/system_detail.html
+++ b/spec_a_console/templates/spec_a_console/system_detail.html
@@ -142,7 +142,7 @@
 
 <!-- Delete Confirmation Modal -->
 <div class="modal fade" id="deleteSystemModal" tabindex="-1" aria-labelledby="deleteSystemModalLabel"
-    aria-hidden="true">
+    aria-hidden="true" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header bg-danger text-white">
